2003-01-21  Murray Cumming  <murrayc@usa.net>

	* Changed library names: 1.4 -> 1.3 and 2.4 -> 2.3 so that they
	can be unstable.

2003-01-21  Murray Cumming  <murrayc@usa.net>

	* Copied and modified slightly the build_shared files from libgdamm,
	to use the gmmproc from glibmm-2.4.

2003-01-21  Murray Cumming  <murrayc@usa.net>

	* Changed library names: 1.0 -> 1.4 and 2.0 -> 2.4

See gtkmm 2.2 for previous ChangeLog entries.