@@ -4,12 +4,12 @@
 SUBDIRS = private
 
 sublib_name = atkmm
-sublib_libname = atkmm-1.4
+sublib_libname = atkmm-1.3
 sublib_libversion = $(LIBGTKMM_SO_VERSION)
 sublib_namespace	= Atk
 sublib_cflags = $(ATKMM_CFLAGS)
-sublib_topdir = atkmm
-sublib_win32_dlls_libs	= $(top_builddir)/glib/glibmm/libglibmm-2.4.la
+sublib_topdir = atk
+sublib_win32_dlls_libs	= $(top_builddir)/glib/glibmm/libglibmm-2.3.la
 
 sublib_files_extra_posix_cc =
 sublib_files_extra_win32_cc =
