@@ -4,26 +4,22 @@
 ## **** Common rules for inclusion in Makefile.am ****
 ## Included by Makefile_build_gensrc.am_fragment
 ##
-## Used variable:		Example content:
-##
-## sublib_name			= glibmm
-## sublib_cflags		= $(GLIBMM_CFLAGS)
-## files_built_cc		=
-## files_built_h		= proxy.h
-## files_extra_cc		= array.cc class.cc closure.cc
-## files_extra_h		= array.h boxedtype.h class.h
-##
-## Returned variable:		Usage example:
-##
-## files_all_cc			libglibmm_la_SOURCES = $(files_all_cc)
-## common_ldflags		libglibmm_la_LDFLAGS = $(common_ldflags)
 
 
-files_all_cc	= $(files_built_cc) $(files_extra_cc)
+#These are used in e.g. gtk/gtkmm/Makefile.am to build the library:
+files_all_general_cc =  $(files_built_cc) $(sublib_files_extra_general_cc)
+files_all_posix_cc = $(sublib_files_extra_posix_cc)
+files_all_win32_cc = $(sublib_files_extra_win32_cc)
 
 common_ldflags	= -version-info $(sublib_libversion)
 
+# All modules can include all other modules,
+# for instance, so that gdkmm can use headers in pangomm.
 all_includes	= -I$(top_builddir)/$(sublib_topdir)		-I$(top_srcdir)/$(sublib_topdir)	\
+		  -I$(top_builddir)/pango	-I$(top_srcdir)/pango	\
+		  -I$(top_builddir)/atk		-I$(top_srcdir)/atk	\
+		  -I$(top_builddir)/gdk		-I$(top_srcdir)/gdk	\
+		  -I$(top_builddir)/gtk		-I$(top_srcdir)/gtk	\
 		  $(sublib_cflags)
 
 dist_sources	= $(files_built_cc) $(files_extra_cc) $(files_built_h) $(files_extra_h)
