@@ -4,17 +4,6 @@
 ## **** Common rules for inclusion in Makefile.am ****
 ## ## Included from something/somethingmm/Makefile.am
 ##
-## Used variable: Example content:
-##
-## sublib_name 	= gtkmm
-## sublib_cflags = $(GTKMM_CFLAGS)
-## files_extra_cc = stock_id.cc
-## files_extra_h = base.h stock_id.h
-##
-## Returned variable: Usage example:
-##
-## files_all_cc 	libgtkmm_la_SOURCES = $(files_all_cc)
-## common_ldflags libgtkmm_la_LDFLAGS = $(common_ldflags)
 
 
 include $(srcdir)/../src/Makefile_list_of_hg.am_fragment
