@@ -39,7 +39,7 @@ gmmproc_args	= -I $(tools_dir_m4) --defs $(srcdir)
 run_gmmproc	= $(gmmproc_path) $(gmmproc_args)
 
 gen_wrap_init_path = $(gmmproc_dir)/generate_wrap_init.pl
-gen_wrap_init_args = --namespace=Gnome --namespace=$(sublib_namespace) --parent_dir=$(sublib_parentdir)
+gen_wrap_init_args = --namespace=$(sublib_namespace) --parent_dir=$(sublib_parentdir)
 run_gen_wrap_init  = $(gen_wrap_init_path) $(gen_wrap_init_args)
 
 EXTRA_DIST	= Makefile_list_of_hg.am_fragment \
