@@ -4,13 +4,13 @@
 SUBDIRS			= private
 
 sublib_name		= gdkmm
-sublib_libname		= gdkmm-1.4
+sublib_libname		= gdkmm-1.3
 sublib_libversion = $(LIBGTKMM_SO_VERSION)
 sublib_namespace	= Gdk
 sublib_cflags		= $(GDKMM_CFLAGS)
-sublib_topdir = gdkmm
-sublib_win32_dlls_libs	= $(top_builddir)/pango/pangomm/libpangomm-1.4.la \
-	        	  $(top_builddir)/glib/glibmm/libglibmm-2.4.la
+sublib_topdir = gdk
+sublib_win32_dlls_libs	= $(top_builddir)/pango/pangomm/libpangomm-1.3.la \
+	        	  $(top_builddir)/glib/glibmm/libglibmm-2.3.la
 
 sublib_files_extra_posix_cc =
 sublib_files_extra_win32_cc =
