@@ -46,12 +46,6 @@ TreePath::TreePath(const TreeModel::iterator& iter)
   gobject_ (gtk_tree_model_get_path(iter.get_model_gobject(), const_cast<GtkTreeIter*>(iter.gobj())))
 {}
 
-// XXX: Only included when building gtkmm; see the comment in treepath.hg.
-TreePath::TreePath(bool first)
-:
-  gobject_ ((first) ? gtk_tree_path_new_first() : gtk_tree_path_new())
-{}
-
 TreePath& TreePath::operator=(const TreeModel::iterator& iter)
 {
   TreePath temp (iter);
