@@ -72,20 +72,6 @@ public:
 
   template <class In> inline TreePath(In pbegin, In pend);
 
-#ifdef gtkmm_COMPILATION
-  // This ctor is deprecated.  It's included when building gtkmm in order to
-  // maintain ABI stability, but not exposed as public API.
-  //
-  // This hack doesn't break API since old source code will implicitely use the
-  // TreePath(size_type, value_type = 0) ctor instead (the conversion from bool
-  // to size_type results in either 0 or 1).
-  //
-  // We can't have both ctors because that would result in hardly predictable
-  // overload resolution and/or ambiguity.
-  //
-  explicit TreePath(bool first);
-#endif
-
   void clear();
 
   // I think it's OK for this assignment to be implicit.  It's dead useful.
