@@ -1,3 +1,15 @@
+2003-01-22  Murray Cumming  <murrayc@usa.net>
+
+	* build_shared: Used the general/win32/posix variables used in
+	the gtkmm Makefile.ams, so that the libraries actually build.
+	* gtk/src/treepath.[hg|ccg]: Removed the TreePath(bool) override, as 
+	suggested, because it broke the build, because we don't seem to set 
+	gtkmm_COMPILATION.
+	* gtk/gtkmm/menu_elem.[h|cc]: It used the RefPtr::operator=() that we
+	removed because that operator=() shouldn't be used. Faked the behaviour
+	with an explict use of the constructor and a reference() for now, with 
+	a TODO.
+
 2003-01-21  Murray Cumming  <murrayc@usa.net>
 
 	* Changed library names: 1.4 -> 1.3 and 2.4 -> 2.3 so that they
